--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -56,3 +56,10 @@ body
 	font-family: "Roboto", sans-serif
 	span
 		color: #8A8A8A 
+	a
+		font-size: 19px
+		color: #404040
+		font-family: "Roboto", sans-serif
+		text-decoration: none
+		&:hover
+			text-decoration: underline
